; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/arm/mach-omap2/extr_powerdomain.c_pwrdm_init.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/arm/mach-omap2/extr_powerdomain.c_pwrdm_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.powerdomain = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @pwrdm_init(%struct.powerdomain** %0) #0 {
  %2 = alloca %struct.powerdomain**, align 8
  %3 = alloca %struct.powerdomain**, align 8
  store %struct.powerdomain** %0, %struct.powerdomain*** %2, align 8
  store %struct.powerdomain** null, %struct.powerdomain*** %3, align 8
  %4 = load %struct.powerdomain**, %struct.powerdomain*** %2, align 8
  %5 = icmp ne %struct.powerdomain** %4, null
  br i1 %5, label %6, label %23

6:                                                ; preds = %1
  %7 = load %struct.powerdomain**, %struct.powerdomain*** %2, align 8
  store %struct.powerdomain** %7, %struct.powerdomain*** %3, align 8
  br label %8

8:                                                ; preds = %19, %6
  %9 = load %struct.powerdomain**, %struct.powerdomain*** %3, align 8
  %10 = load %struct.powerdomain*, %struct.powerdomain** %9, align 8
  %11 = icmp ne %struct.powerdomain* %10, null
  br i1 %11, label %12, label %22

12:                                               ; preds = %8
  %13 = load %struct.powerdomain**, %struct.powerdomain*** %3, align 8
  %14 = load %struct.powerdomain*, %struct.powerdomain** %13, align 8
  %15 = call i32 @pwrdm_register(%struct.powerdomain* %14)
  %16 = load %struct.powerdomain**, %struct.powerdomain*** %3, align 8
  %17 = load %struct.powerdomain*, %struct.powerdomain** %16, align 8
  %18 = call i32 @_pwrdm_setup(%struct.powerdomain* %17)
  br label %19

19:                                               ; preds = %12
  %20 = load %struct.powerdomain**, %struct.powerdomain*** %3, align 8
  %21 = getelementptr inbounds %struct.powerdomain*, %struct.powerdomain** %20, i32 1
  store %struct.powerdomain** %21, %struct.powerdomain*** %3, align 8
  br label %8

22:                                               ; preds = %8
  br label %23

23:                                               ; preds = %22, %1
  ret void
}

declare dso_local i32 @pwrdm_register(%struct.powerdomain*) #1

declare dso_local i32 @_pwrdm_setup(%struct.powerdomain*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
